--- a/1-学习笔记/7-css/css-demo.html
+++ b/1-学习笔记/7-css/css-demo.html
@@ -533,7 +533,7 @@
     <div class="animation-pause3"></div>
   </div>
   <div class="bear">
-    <img src="./images/css/bear.png" alt="">
+    <img src="../0-images/css/bear.png" alt="">
   </div>
   <!-- 3D转换 -->
   <div class="container3d">
@@ -542,9 +542,9 @@
   <!-- demo1 -->
   <div class="rotate3d">
     <div class="demo3d">
-      <img src="./images/css/image1.jpeg" alt="" width="200px">
-      <img src="./images/css/image1.jpeg" alt="" width="200px">
-      <img src="./images/css/image1.jpeg" alt="" width="200px">
+      <img src="../0-images/css/image1.jpeg" alt="" width="200px">
+      <img src="../0-images/css/image1.jpeg" alt="" width="200px">
+      <img src="../0-images/css/image1.jpeg" alt="" width="200px">
     </div>
   </div>
   <!-- demo2 -->
@@ -557,10 +557,10 @@
   <!-- demo3 -->
   <div class="rotate3">
     <div class="demo3">
-      <img src="./images/css/image1.jpeg" alt="" width="200px">
-      <img src="./images/css/image1.jpeg" alt="" width="200px">
-      <img src="./images/css/image1.jpeg" alt="" width="200px">
-      <img src="./images/css/image1.jpeg" alt="" width="200px">
+      <img src="../0-images/css/image1.jpeg" alt="" width="200px">
+      <img src="../0-images/css/image1.jpeg" alt="" width="200px">
+      <img src="../0-images/css/image1.jpeg" alt="" width="200px">
+      <img src="../0-images/css/image1.jpeg" alt="" width="200px">
     </div>
   </div>
   <!-- 搜索栏布局 -->
@@ -578,26 +578,26 @@
   <div></div>
   <style>
     html{
-      font-size: 50px;
+      font-size: 25px;
     }
     @media screen and (max-width:1200px) {
       html {
-        font-size: 40px;
+        font-size: 20px;
       } 
     } 
     @media screen and (max-width: 1000px){
       html {
-        font-size: 30px;
+        font-size: 16px;
       }
     }
     @media screen and (max-width: 800px){
       html {
-        font-size: 20px;
+        font-size: 14px;
       }
     }
     @media screen and (max-width: 600px){
       html {
-        font-size: 10px;
+        font-size: 12px;
       }
     }
     .nav {
